[package]
name = "pullcaps"
version = "0.2.0"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2021"
description = "An asynchronous client for the PushShift API"
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/dcchut/pullcaps"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.governor]
version = "0.4"

[dependencies.async-stream]
version = "0.3"

[dependencies.futures]
version = "0.3"

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]

[dependencies.once_cell]
version = "1.9"

[dev-dependencies.tokio]
version = "1.15"
features = ["full"]
